# agentforge-gateway

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  config.example.json  config.openrouter.example.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: api-contract.md  architecture-v1.md  compatibility-targets.md  configuration.md  key-management.md  overview.md  provider-routing.md
examples/: openai-compatible-curl.md
src/agentforge_gateway/: __init__.py  app.py  cli.py  config.py  errors.py  models.py  providers.py
tests/: test_app.py
