[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentforge-gateway"
version = "0.1.0a0"
description = "OpenAI-compatible local AI gateway for AgentForge"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AgentForge" }]
dependencies = []

[project.scripts]
agentforge-gateway = "agentforge_gateway.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

